Added some elements to website and CSS

--- a/index.html
+++ b/index.html
@@ -1,2 +1,59 @@
+<!DOCTYPE html> 
 <html>
+    <head>
+        <title>Anthony's Website</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div id="banner">
+            <a href="index.html">Home</a>
+            <a href="">Projects</a>
+            <a href="mailto:anthonytoribio01@gmail.com?subject = Contacting = Message">Contact Me</a>
+        </div>
+
+        <div id="main">
+            <img src="images/myself.jpg" alt="Image of myself, in the middle of a run" width="350" height="450"/>
+            <h1>Hello, my name is Anthony Toribio!</h1>
+            <p>
+                Welcome to my personal website! I am currently a Computer Science student at the University of 
+                California, Irvine.
+            </p>
+
+            <h2 class="sections">Experience</h2>
+            <p>
+                As of now, I am a programming tutor for Coding Minds Academy, based in Irvine California. I teach K-12 students programming concepts
+                in Python.
+                <br><br>
+                This summer, I will be interning at DirecTV as an Android Developer. 
+            </p>
+
+            <h2 class="sections">Some Fun Facts About Me</h2>
+            <ul>
+                <li>I am an avid runner 🏃</li>
+                <li>I used to play the trumpet</li>
+                <li>My favorite book is <i>One Hundred Years Of Solitude</i> by Gabriel Marquez</li>
+            </ul>
+
+            <h2 class="sections">My Technical Skills</h3>
+            <ul>
+                <li>Python</li>
+                <li>C++</li>
+                <li>Java</li>
+                <li>Kotlin</li>
+                <li>R</li>
+            </ul>
+        
+            <div id="Outicons">
+                <div id="icons">
+                    <a href="https://github.com/anthonytoribio" target="_blank">
+                        <img src="images/githubLogo.png" alt="Github logo" width="100" height="100"/>
+                    </a>
+                    <a href="https://www.linkedin.com/in/anthony-toribio-074093199/" target="_blank">
+                        <img src="images/linkedInLogo.png" alt="linkedIn Logo" width = "100" height="100"/>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
