--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
         <title>Anthony's Website</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css" />
+
+        <script type="text/javascript">
+            const redirects = {
+              "resume": "Anthony's Resume.pdf"
+            }
+        
+            const path = window.location.pathname.substring(1).toLowerCase();
+      
+            const redirect = redirects[path];
+            if (redirect) {
+              // Redirect to the desired location
+              window.location.replace(redirect);
+            } else {
+              window.location.replace("https://anthonytoribio.github.io/"); 
+            }
+          </script>
+
     </head>
     <body>
         <div id="banner">
