--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <script type="text/javascript">
             const redirects = {
-              "resume": "Anthony's Resume.pdf"
+              "resume": "resume.pdf"
             }
         
             const path = window.location.pathname.substring(1).toLowerCase();
