--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
         <div id="banner">
             <a href="index.html">Home</a>
-            <a href="">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="mailto:anthonytoribio01@gmail.com?subject = Contacting = Message">Contact Me</a>
         </div>
 
@@ -60,6 +60,10 @@
                 <li>Kotlin</li>
                 <li>R</li>
             </ul>
+
+            <h2 class="sections">Resume</h2>
+            <p>Click on the link below to view my resume.</p>
+            <a ref="C:\Users\antho\OneDrive\Desktop\Projects\Fellowship\personal-website\resume.pdf">VIEW RESUME</a>
         
             <div id="Outicons">
                 <div id="icons">
