Fixed some image loading issues and fixed the issue where the resume was not opening

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <h2 class="sections">Resume</h2>
             <p>Click on the link below to view my resume.</p>
-            <a ref="C:\Users\antho\OneDrive\Desktop\Projects\Fellowship\personal-website\resume.pdf">VIEW RESUME</a>
+            <a href="resume.pdf">VIEW RESUME</a>
         
             <div id="Outicons">
                 <div id="icons">
