--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 
             <h2>Youtube Fast Forward</h2>
             <div class="project">
-                <img href="images/walkthrough3.gif" width="250" height="300">
+                <img src="images/walkthrough3.gif" width="250" height="300">
                 <p>As a team, we created an Andorid app that let's the user create a Youtube Playlist that
                     synced to their Youtube account. They can delete existing playlists, add videos to playists,
                     delete videos from playlists. Users also have the option to auto-create playlist based on
@@ -30,7 +30,7 @@
 
             <h2>MLB Daily Home Runs</h2>
             <div class="project">
-                <img href="images/MLBWebsiteExample.PNG" width="300" height="250" alt="Image of MLB Daily Home Runs Website">
+                <img src="images/MLBWebsiteExample.PNG" width="300" height="250" alt="Image of MLB Daily Home Runs Website">
                 <p>A website that uses the MLB Data API to showcase the number of homeruns hit the day the user
                     visits the website and the player that hit the homerun(s). The website was built using HTML, CSS,
                     Javascript, and Django.
